# voxel-benchmark

./: Cargo.toml
examples/geometry-cube/: main.rs  shader.frag  shader.geom  shader.vert
examples/geometry-face/: main.rs  shader.geom  shader.vert
examples/naive-cube/: main.rs  shader.vert
src/: assets.rs  block.rs  chunk.rs  lib.rs  renderer.rs  texture.rs  utils.rs  world.rs
src/camera/: mod.rs  model_camera.rs
src/generator/: flat.rs  mod.rs  random.rs
src/packs/: basic.rs  mod.rs  utils.rs
